Schema, Controller, Env setup for Conversations (Group + DM) (#17)
* feat: add docker compose for easy dev env setup

* chore: add playwright scripts for mock data loading

* feat(server): add conversation schema and message creation endpoint

* docs: update README Todo list

* refactor: rename pool to appDBPool to make scope for messageDBPool later
